plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.4'
}

apply plugin: 'io.spring.dependency-management'

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

bootRun {
    jvmArgs = ["--enable-preview", "-XX:ActiveProcessorCount=2"]
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'

    implementation("com.squareup.okhttp3:okhttp:4.10.0")

    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}